[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modinverse = "0.1.1"
num = "0.4.1"
num-bigint = "0.4.4"
num-bigint-dig = "0.8.4"
num-primes = "0.3.0"
rand = "0.8.5"
sha256 = "1.4.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
