[package]
name = "mental_poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enc = { path = "../enc" }

num-primes = "0.3.0"
num-bigint-dig = "0.8.4"
num = "0.4.1"
rand = "0.8.5"
num-bigint = "0.4.4"
num-traits = "0.2.17"
